src/main/java/com/example/library_application/task1_srp/errors/exeptions/NotfoundException.java
package com.example.library_application.task1_srp.errors.exeptions;

public class NotfoundException extends RuntimeException{
    public NotfoundException(String message) {
        super(message);
    }
}
